<resources>
    <string name="app_name">MQ4M1</string>
    <string name="next_command">Next command</string>
    <string name="command_saved">Command saved: %s</string>
    <string name="audio_recording_result">Audio was recorded and saved in %s</string>
    <string name="video_capturing_result">Video was captured: file path %s</string>
    <string name="taking_photo_result">Photo was taken: file path %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_take_a_video">Take a video</string>
    <string name="open_url">Open URL</string>
    <string name="take_photo_custom_crop">Take a photo (Custom crop)</string>
    <string name="take_photo_lib_crop">Take a photo (3rd lib crop)</string>
    <string name="record_video">Record video</string>
    <string name="record_audio">Record audio</string>
    <string name="audio_recording_started">Audop recording started</string>
</resources>
