<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eficksan.mq4m1.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_command"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="80dp" />


    <Button
        android:id="@+id/next_command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/next_command" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/next_command"
        android:orientation="vertical">

        <Button
            android:id="@+id/open_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_url" />

        <Button
            android:id="@+id/take_photo_custom_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_custom_crop" />

        <Button
            android:id="@+id/take_photo_lib_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_lib_crop" />

        <Button
            android:id="@+id/record_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_video" />

        <Button
            android:id="@+id/record_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_audio" />

    </LinearLayout>
</RelativeLayout>
